--- a/config/database.yml
+++ b/config/database.yml
@@ -1,32 +1,64 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
+# # SQLite. Versions 3.8.0 and up are supported.
+# #   gem install sqlite3
+# #
+# #   Ensure the SQLite 3 gem is defined in your Gemfile
+# #   gem "sqlite3"
+# #
+# default: &default
+#   adapter: sqlite3
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#   timeout: 5000
+
+# development:
+#   <<: *default
+#   database: storage/development.sqlite3
+
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
+# test:
+#   <<: *default
+#   database: storage/test.sqlite3
+
+
+# # SQLite3 write its data on the local filesystem, as such it requires
+# # persistent disks. If you are deploying to a managed service, you should
+# # make sure it provides disk persistence, as many don't.
+# #
+# # Similarly, if you deploy your application as a Docker container, you must
+# # ensure the database is located in a persisted volume.
+# production:
+#   <<: *default
+#   # database: path/to/persistent/storage/production.sqlite3
+
+
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV["RAILS_DB_POOL"] || ENV['RAILS_MAX_THREADS'] || 5 %>
+  idle_timeout: <%= ENV["RAILS_IDLE_CONNECTION"] ||  60 %>
+  port: <%= ENV['RAILS_DATABASE_PORT'] || 5432 %>
+
+
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
+production:
+  adapter: postgresql
+  database: chetu_blog_new
+  username: postgres
+  password: netambit
+  host: localhost
+  encoding: unicode
+  pool: 5
+  port: 5432
 
 development:
   <<: *default
-  database: storage/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: storage/test.sqlite3
-
-
-# SQLite3 write its data on the local filesystem, as such it requires
-# persistent disks. If you are deploying to a managed service, you should
-# make sure it provides disk persistence, as many don't.
-#
-# Similarly, if you deploy your application as a Docker container, you must
-# ensure the database is located in a persisted volume.
-production:
-  <<: *default
-  # database: path/to/persistent/storage/production.sqlite3
+  adapter: postgresql
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['TEMPLATEAPP_DATABASE_USER'] %>
+  password: <%= ENV['TEMPLATEAPP_DATABASE_PASSWORD'] %>
+  host: <%= ENV['TEMPLATE_DATABASE_HOSTNAME'] %>
+  encoding: unicode
+  pool: 5
+  port: 5432
